# posting-extractor

./: .gitignore  Makefile  README.md  pyproject.toml
posting_extractor/: cli.py  extractor.py
tests/: test_extractor.py
tests/fixtures/: sample_output.md  sample_output.yaml
upwork_extractor/: __init__.py  cli.py  extractor.py
